y.output
Terminals which are not used

   ERROR


Grammar

    0 $accept: es $end

    1 es: line end
    2   | error end

    3 end: NL
    4    | ENDFILE

    5 line: cmd
    6     | cmdsa line

    7 body: cmd
    8     | cmdsan body

    9 cmdsa: cmd ';'
   10      | cmd '&'

   11 cmdsan: cmdsa
   12       | cmd NL

   13 cmd: /* empty */
   14    | simple
   15    | redir cmd
   16    | first assign
   17    | fn
   18    | binder nl '(' bindings ')' nl cmd
   19    | cmd ANDAND nl cmd
   20    | cmd OROR nl cmd
   21    | cmd PIPE nl cmd
   22    | '!' caret cmd
   23    | '~' word words
   24    | EXTRACT word words

   25 simple: first
   26       | simple word
   27       | simple redir

   28 redir: DUP
   29      | REDIR word

   30 bindings: binding
   31         | bindings ';' binding
   32         | bindings NL binding

   33 binding: /* empty */
   34        | fn
   35        | word assign

   36 assign: caret '=' caret words

   37 fn: FN word params '{' body '}'
   38   | FN word

   39 first: comword
   40      | first '^' sword

   41 sword: comword
   42      | keyword

   43 word: sword
   44     | word '^' sword

   45 comword: param
   46        | '(' nlwords ')'
   47        | '{' body '}'
   48        | '@' params '{' body '}'
   49        | '$' sword
   50        | '$' sword SUB words ')'
   51        | CALL sword
   52        | COUNT sword
   53        | FLAT sword
   54        | PRIM WORD
   55        | '`' sword
   56        | BACKBACK word sword

   57 param: WORD
   58      | QWORD

   59 params: /* empty */
   60       | params param

   61 words: /* empty */
   62      | words word

   63 nlwords: /* empty */
   64        | nlwords word
   65        | nlwords NL

   66 nl: /* empty */
   67   | nl NL

   68 caret: /* empty */
   69      | '^'

   70 binder: LOCAL
   71       | LET
   72       | FOR
   73       | CLOSURE

   74 keyword: '!'
   75        | '~'
   76        | EXTRACT
   77        | LOCAL
   78        | LET
   79        | FOR
   80        | FN
   81        | CLOSURE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 22 74
'$' (36) 49 50
'&' (38) 10
'(' (40) 18 46
')' (41) 18 46 50
';' (59) 9 31
'=' (61) 36
'@' (64) 48
'^' (94) 40 44 69
'`' (96) 55
'{' (123) 37 47 48
'}' (125) 37 47 48
'~' (126) 23 75
error (256) 2
WORD (258) 54 57
QWORD (259) 58
LOCAL (260) 70 77
LET (261) 71 78
FOR (262) 72 79
CLOSURE (263) 73 81
FN (264) 37 38 80
ANDAND (265) 19
BACKBACK (266) 56
EXTRACT (267) 24 76
CALL (268) 51
COUNT (269) 52
DUP (270) 28
FLAT (271) 53
OROR (272) 20
PRIM (273) 54
REDIR (274) 29
SUB (275) 50
NL (276) 3 12 32 65 67
ENDFILE (277) 4
ERROR (278)
PIPE (279) 21


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
es (39)
    on left: 1 2, on right: 0
end (40)
    on left: 3 4, on right: 1 2
line (41)
    on left: 5 6, on right: 1 6
body (42)
    on left: 7 8, on right: 8 37 47 48
cmdsa (43)
    on left: 9 10, on right: 6 11
cmdsan (44)
    on left: 11 12, on right: 8
cmd (45)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24, on right: 5 7 9 10
    12 15 18 19 20 21 22
simple (46)
    on left: 25 26 27, on right: 14 26 27
redir (47)
    on left: 28 29, on right: 15 27
bindings (48)
    on left: 30 31 32, on right: 18 31 32
binding (49)
    on left: 33 34 35, on right: 30 31 32
assign (50)
    on left: 36, on right: 16 35
fn (51)
    on left: 37 38, on right: 17 34
first (52)
    on left: 39 40, on right: 16 25 40
sword (53)
    on left: 41 42, on right: 40 43 44 49 50 51 52 53 55 56
word (54)
    on left: 43 44, on right: 23 24 26 29 35 37 38 44 56 62 64
comword (55)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56, on right: 39 41
param (56)
    on left: 57 58, on right: 45 60
params (57)
    on left: 59 60, on right: 37 48 60
words (58)
    on left: 61 62, on right: 23 24 36 50 62
nlwords (59)
    on left: 63 64 65, on right: 46 64 65
nl (60)
    on left: 66 67, on right: 18 19 20 21 67
caret (61)
    on left: 68 69, on right: 22 36
binder (62)
    on left: 70 71 72 73, on right: 18
keyword (63)
    on left: 74 75 76 77 78 79 80 81, on right: 42


state 0

    0 $accept: . es $end

    error     shift, and go to state 1
    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    ANDAND   reduce using rule 13 (cmd)
    OROR     reduce using rule 13 (cmd)
    NL       reduce using rule 13 (cmd)
    ENDFILE  reduce using rule 13 (cmd)
    PIPE     reduce using rule 13 (cmd)
    ';'      reduce using rule 13 (cmd)
    '&'      reduce using rule 13 (cmd)

    es       go to state 24
    line     go to state 25
    cmdsa    go to state 26
    cmd      go to state 27
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 1

    2 es: error . end

    NL       shift, and go to state 35
    ENDFILE  shift, and go to state 36

    end  go to state 37


state 2

   57 param: WORD .

    $default  reduce using rule 57 (param)


state 3

   58 param: QWORD .

    $default  reduce using rule 58 (param)


state 4

   70 binder: LOCAL .

    $default  reduce using rule 70 (binder)


state 5

   71 binder: LET .

    $default  reduce using rule 71 (binder)


state 6

   72 binder: FOR .

    $default  reduce using rule 72 (binder)


state 7

   73 binder: CLOSURE .

    $default  reduce using rule 73 (binder)


state 8

   37 fn: FN . word params '{' body '}'
   38   | FN . word

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 47
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 9

   56 comword: BACKBACK . word sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 50
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 10

   24 cmd: EXTRACT . word words

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 51
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 11

   51 comword: CALL . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 52
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 12

   52 comword: COUNT . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 53
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 13

   28 redir: DUP .

    $default  reduce using rule 28 (redir)


state 14

   53 comword: FLAT . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 54
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 15

   54 comword: PRIM . WORD

    WORD  shift, and go to state 55


state 16

   29 redir: REDIR . word

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 56
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 17

   22 cmd: '!' . caret cmd

    '^'  shift, and go to state 57

    $default  reduce using rule 68 (caret)

    caret  go to state 58


state 18

   49 comword: '$' . sword
   50        | '$' . sword SUB words ')'

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 59
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 19

   46 comword: '(' . nlwords ')'

    $default  reduce using rule 63 (nlwords)

    nlwords  go to state 60


state 20

   23 cmd: '~' . word words

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 61
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 21

   47 comword: '{' . body '}'

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 13 (cmd)

    body     go to state 62
    cmdsa    go to state 63
    cmdsan   go to state 64
    cmd      go to state 65
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 22

   48 comword: '@' . params '{' body '}'

    $default  reduce using rule 59 (params)

    params  go to state 66


state 23

   55 comword: '`' . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 67
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 24

    0 $accept: es . $end

    $end  shift, and go to state 68


state 25

    1 es: line . end

    NL       shift, and go to state 35
    ENDFILE  shift, and go to state 36

    end  go to state 69


state 26

    6 line: cmdsa . line

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 13 (cmd)

    line     go to state 70
    cmdsa    go to state 26
    cmd      go to state 27
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 27

    5 line: cmd .
    9 cmdsa: cmd . ';'
   10      | cmd . '&'
   19 cmd: cmd . ANDAND nl cmd
   20    | cmd . OROR nl cmd
   21    | cmd . PIPE nl cmd

    ANDAND  shift, and go to state 71
    OROR    shift, and go to state 72
    PIPE    shift, and go to state 73
    ';'     shift, and go to state 74
    '&'     shift, and go to state 75

    $default  reduce using rule 5 (line)


state 28

   14 cmd: simple .
   26 simple: simple . word
   27       | simple . redir

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 14 (cmd)

    redir    go to state 76
    sword    go to state 46
    word     go to state 77
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 29

   15 cmd: redir . cmd

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 13 (cmd)

    cmd      go to state 78
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 30

   17 cmd: fn .

    $default  reduce using rule 17 (cmd)


state 31

   16 cmd: first . assign
   25 simple: first .
   40 first: first . '^' sword

    '^'  shift, and go to state 79

    '='       reduce using rule 68 (caret)
    $default  reduce using rule 25 (simple)

    assign  go to state 80
    caret   go to state 81


state 32

   39 first: comword .

    $default  reduce using rule 39 (first)


state 33

   45 comword: param .

    $default  reduce using rule 45 (comword)


state 34

   18 cmd: binder . nl '(' bindings ')' nl cmd

    $default  reduce using rule 66 (nl)

    nl  go to state 82


state 35

    3 end: NL .

    $default  reduce using rule 3 (end)


state 36

    4 end: ENDFILE .

    $default  reduce using rule 4 (end)


state 37

    2 es: error end .

    $default  reduce using rule 2 (es)


state 38

   77 keyword: LOCAL .

    $default  reduce using rule 77 (keyword)


state 39

   78 keyword: LET .

    $default  reduce using rule 78 (keyword)


state 40

   79 keyword: FOR .

    $default  reduce using rule 79 (keyword)


state 41

   81 keyword: CLOSURE .

    $default  reduce using rule 81 (keyword)


state 42

   80 keyword: FN .

    $default  reduce using rule 80 (keyword)


state 43

   76 keyword: EXTRACT .

    $default  reduce using rule 76 (keyword)


state 44

   74 keyword: '!' .

    $default  reduce using rule 74 (keyword)


state 45

   75 keyword: '~' .

    $default  reduce using rule 75 (keyword)


state 46

   43 word: sword .

    $default  reduce using rule 43 (word)


state 47

   37 fn: FN word . params '{' body '}'
   38   | FN word .
   44 word: word . '^' sword

    '^'  shift, and go to state 83

    WORD      reduce using rule 59 (params)
    QWORD     reduce using rule 59 (params)
    '{'       reduce using rule 59 (params)
    $default  reduce using rule 38 (fn)

    params  go to state 84


state 48

   41 sword: comword .

    $default  reduce using rule 41 (sword)


state 49

   42 sword: keyword .

    $default  reduce using rule 42 (sword)


state 50

   44 word: word . '^' sword
   56 comword: BACKBACK word . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '^'       shift, and go to state 83
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 85
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 51

   24 cmd: EXTRACT word . words
   44 word: word . '^' sword

    '^'  shift, and go to state 83

    $default  reduce using rule 61 (words)

    words  go to state 86


state 52

   51 comword: CALL sword .

    $default  reduce using rule 51 (comword)


state 53

   52 comword: COUNT sword .

    $default  reduce using rule 52 (comword)


state 54

   53 comword: FLAT sword .

    $default  reduce using rule 53 (comword)


state 55

   54 comword: PRIM WORD .

    $default  reduce using rule 54 (comword)


state 56

   29 redir: REDIR word .
   44 word: word . '^' sword

    '^'  shift, and go to state 83

    $default  reduce using rule 29 (redir)


state 57

   69 caret: '^' .

    $default  reduce using rule 69 (caret)


state 58

   22 cmd: '!' caret . cmd

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 13 (cmd)

    cmd      go to state 87
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 59

   49 comword: '$' sword .
   50        | '$' sword . SUB words ')'

    SUB  shift, and go to state 88

    $default  reduce using rule 49 (comword)


state 60

   46 comword: '(' nlwords . ')'
   64 nlwords: nlwords . word
   65        | nlwords . NL

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    NL        shift, and go to state 89
    ')'       shift, and go to state 90
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 46
    word     go to state 91
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 61

   23 cmd: '~' word . words
   44 word: word . '^' sword

    '^'  shift, and go to state 83

    $default  reduce using rule 61 (words)

    words  go to state 92


state 62

   47 comword: '{' body . '}'

    '}'  shift, and go to state 93


state 63

   11 cmdsan: cmdsa .

    $default  reduce using rule 11 (cmdsan)


state 64

    8 body: cmdsan . body

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 4
    LET       shift, and go to state 5
    FOR       shift, and go to state 6
    CLOSURE   shift, and go to state 7
    FN        shift, and go to state 8
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 10
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    DUP       shift, and go to state 13
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    REDIR     shift, and go to state 16
    '!'       shift, and go to state 17
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 20
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 13 (cmd)

    body     go to state 94
    cmdsa    go to state 63
    cmdsan   go to state 64
    cmd      go to state 65
    simple   go to state 28
    redir    go to state 29
    fn       go to state 30
    first    go to state 31
    comword  go to state 32
    param    go to state 33
    binder   go to state 34


state 65

    7 body: cmd .
    9 cmdsa: cmd . ';'
   10      | cmd . '&'
   12 cmdsan: cmd . NL
   19 cmd: cmd . ANDAND nl cmd
   20    | cmd . OROR nl cmd
   21    | cmd . PIPE nl cmd

    ANDAND  shift, and go to state 71
    OROR    shift, and go to state 72
    NL      shift, and go to state 95
    PIPE    shift, and go to state 73
    ';'     shift, and go to state 74
    '&'     shift, and go to state 75

    $default  reduce using rule 7 (body)


state 66

   48 comword: '@' params . '{' body '}'
   60 params: params . param

    WORD   shift, and go to state 2
    QWORD  shift, and go to state 3
    '{'    shift, and go to state 96

    param  go to state 97


state 67

   55 comword: '`' sword .

    $default  reduce using rule 55 (comword)


state 68

    0 $accept: es $end .

    $default  accept


state 69

    1 es: line end .

    $default  reduce using rule 1 (es)


state 70

    6 line: cmdsa line .

    $default  reduce using rule 6 (line)


state 71

   19 cmd: cmd ANDAND . nl cmd

    $default  reduce using rule 66 (nl)

    nl  go to state 98


state 72

   20 cmd: cmd OROR . nl cmd

    $default  reduce using rule 66 (nl)

    nl  go to state 99


state 73

   21 cmd: cmd PIPE . nl cmd

    $default  reduce using rule 66 (nl)

    nl  go to state 100


state 74

    9 cmdsa: cmd ';' .

    $default  reduce using rule 9 (cmdsa)


state 75

   10 cmdsa: cmd '&' .

    $default  reduce using rule 10 (cmdsa)


state 76

   27 simple: simple redir .

    $default  reduce using rule 27 (simple)


state 77

   26 simple: simple word .
   44 word: word . '^' sword

    '^'  shift, and go to state 83

    $default  reduce using rule 26 (simple)


state 78

   15 cmd: redir cmd .
   19    | cmd . ANDAND nl cmd
   20    | cmd . OROR nl cmd
   21    | cmd . PIPE nl cmd

    PIPE  shift, and go to state 73

    $default  reduce using rule 15 (cmd)


state 79

   40 first: first '^' . sword
   69 caret: '^' .

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 69 (caret)

    sword    go to state 101
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 80

   16 cmd: first assign .

    $default  reduce using rule 16 (cmd)


state 81

   36 assign: caret . '=' caret words

    '='  shift, and go to state 102


state 82

   18 cmd: binder nl . '(' bindings ')' nl cmd
   67 nl: nl . NL

    NL   shift, and go to state 103
    '('  shift, and go to state 104


state 83

   44 word: word '^' . sword

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    sword    go to state 105
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 84

   37 fn: FN word params . '{' body '}'
   60 params: params . param

    WORD   shift, and go to state 2
    QWORD  shift, and go to state 3
    '{'    shift, and go to state 106

    param  go to state 97


state 85

   56 comword: BACKBACK word sword .

    $default  reduce using rule 56 (comword)


state 86

   24 cmd: EXTRACT word words .
   62 words: words . word

    WORD      shift, and go to state 2
    QWORD     shift, and go to state 3
    LOCAL     shift, and go to state 38
    LET       shift, and go to state 39
    FOR       shift, and go to state 40
    CLOSURE   shift, and go to state 41
    FN        shift, and go to state 42
    BACKBACK  shift, and go to state 9
    EXTRACT   shift, and go to state 43
    CALL      shift, and go to state 11
    COUNT     shift, and go to state 12
    FLAT      shift, and go to state 14
    PRIM      shift, and go to state 15
    '!'       shift, and go to state 44
    '$'       shift, and go to state 18
    '('       shift, and go to state 19
    '~'       shift, and go to state 45
    '{'       shift, and go to state 21
    '@'       shift, and go to state 22
    '`'       shift, and go to state 23

    $default  reduce using rule 24 (cmd)

    sword    go to state 46
    word     go to state 107
    comword  go to state 48
    param    go to state 33
    keyword  go to state 49


state 87

   19 cmd: cmd . ANDAND nl cmd
   20    | cmd . OROR nl cmd
   21    | cmd . PIPE nl cmd
   22    | '!' caret cmd .

    PIPE  shift, and go to state 73

    $default  reduce using rule 22 (cmd)


state 88

   50 comword: '$' sword SUB . words ')'

    $default  reduce using rule 61 (words)
